# ae_Android

./: .gitignore  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/ae_android/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/ae_android/: FirstFragment.java  MainActivity.java  NaverRecognizer.java  SecondFragment.java
app/src/main/java/com/example/ae_android/ui/: coloringFragment.java  coloringPopupFragment.java  recordFragment.java
app/src/main/java/com/example/ae_android/ui/coloring/: ColorOnPicFragment.java  ColorOnPicView.java
app/src/main/java/com/example/ae_android/utils/: AudioWriterPCM.java
app/src/main/res/drawable/: home_iconshape.xml  mmse_corner.xml  mmse_dialog_btn_shape.xml  mmse_layout_border.xml  mmse_number_border.xml  rounded_corner.xml
app/src/main/res/layout/: app_bar_main.xml  color_sheet.xml  fragment_color_on_pic.xml  fragment_coloring.xml  fragment_coloring_popup.xml  fragment_home.xml  fragment_my_data.xml  fragment_record.xml  fragment_slideshow.xml  fragment_storycard.xml  mmse_custom_dialog.xml  mmse_fragment.xml  nav_header_main.xml
app/src/main/res/menu/: activity_main_drawer.xml
app/src/main/res/navigation/: mobile_navigation.xml  nav_graph.xml
app/src/main/res/values/: attrs.xml  colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/ae_android/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
opencv/libcxx_helper/: CMakeLists.txt  native-lib.cpp
(+12 files in other folders)
